<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Register">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mailEt"
                android:importantForAutofill="no"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="#ffffff">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passEt"
                android:textColorHint="@color/black"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="#ffffff">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameEt"
                android:importantForAutofill="no"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="#ffffff">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateTxt"
            android:text="@string/dateTxt"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="20sp">
        </TextView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Register"
            android:layout_marginTop="10dp"
            android:background="#086A87"
            android:textColor="#ffffff"
            android:text="@string/Register">
        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>