<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mailLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/mailLogin"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="10dp">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/passLogin"
                android:importantForAutofill="no"
                android:inputType="textPassword">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/BtnLogin"
            android:text="@string/BtnLogin"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="#086A87"
            android:textColor="#ffffff"
            android:layout_height="wrap_content">

        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>